--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
 
+  <div id="scene-description">
+    <h1>Scene Title</h1>
+    <p>Scene Description</p>
+  </div>
 
+<div id="scene-container">
+
+<img id="joker" src="Joker.png">
+
+<img id="hospital" src="Hosptial.png">
+
+<img id="remote" src="Remote.png">
+
+</div>
 
 </body>
 </html>
