--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
 <img id="hospital" src="Hosptial.png">
 
-<img id="remote" src="Remote.png">
+<img id="remote" src="Remote2.png">
+
+<img id="fire" src="Fire.png">
+
+<img id="fire2" src="Fire2.png">
 
 </div>
 
